--- a/src/global.less
+++ b/src/global.less
@@ -17,6 +17,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1{
+  font-size: 2em;
+}
 ul,
 ol {
   list-style: none;
@@ -30,7 +33,7 @@ ol {
   background: @layout-body-background;
 }
 
-.icon {
+.loginIcon {
   margin-left: 16px;
   color: rgba(0, 0, 0, 0.2);
   font-size: 24px;
@@ -42,3 +45,7 @@ ol {
     color: @primary-color;
   }
 }
+
+// .ant-pro-card {
+//   background-color: rgb(20, 20, 20) !important;
+// }
