--- a/src/client/global.less
+++ b/src/client/global.less
@@ -1,4 +1,7 @@
 @import "~antd/es/style/themes/default.less";
+@import "~quill/dist/quill.snow.css";
+@import "~quill/dist/quill.bubble.css";
+@import "~quill/dist/quill.core.css";
 
 html,
 body,
