--- a/src/client/global.less
+++ b/src/client/global.less
@@ -282,3 +282,10 @@ ol {
   margin-bottom: 0 !important;
   padding-bottom: 0.1em !important;
 }
+
+// FIXME: try to disable text selction menu on ios, but not working yet.
+.ce-block {
+  -webkit-touch-callout:none;
+  -webkit-user-modify: read-write-plaintext-only;
+  user-modify: read-write-plaintext-only;
+}
