--- a/src/client/global.less
+++ b/src/client/global.less
@@ -113,6 +113,7 @@ ol {
   background-color: @layout-body-background;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position:center;
   width: 100%;
   padding-top: 75%;
   position: relative;
@@ -133,6 +134,7 @@ ol {
   background-color: @layout-body-background;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position:center;
   width: 100%;
   padding-top: 75%;
   position: relative;
